--- a/press-on nails.html
+++ b/press-on nails.html
@@ -283,9 +283,14 @@
         <h4>Nail Art</h4><div class="price">Ghc30.00</div>
         <button class="add" onclick="addToCart(this)">Add to Cart</button>
       </div>
-      <div class="card" data-name="Fashion Nails" data-price="35.00">
-        <img src="https://scentsandslayaesthetics.github.io/onlineshop/po4.jpeg" alt="">
-        <h4>Fashion Nails</h4><div class="price">Ghc35.00</div>
+      <div class="card" data-name="NG Nails" data-price="35.00">
+        <img src="https://scentsandslayaesthetics.github.io/onlineshop/po14.jpeg" alt="">
+        <h4>NG Nails</h4><div class="price">Ghc35.00</div>
+        <button class="add" onclick="addToCart(this)">Add to Cart</button>
+      </div>
+      <div class="card" data-name="NG Nails" data-price="35.00">
+        <img src="https://scentsandslayaesthetics.github.io/onlineshop/po15.jpeg" alt="">
+        <h4>NG Nails</h4><div class="price">Ghc35.00</div>
         <button class="add" onclick="addToCart(this)">Add to Cart</button>
       </div>
     </section>
